tests/types/errors/lambda_return_type_mismatch.mog
var bad fn(i32) i32 = fn(x i32) => "oops"
